[tool.poetry]
name = "aoc24"
version = "0.1.0"
description = ""
authors = ["Arnaud Pannatier <pannatad@skysoft-atm.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
advent-of-code-data = "^2.0.4"
torch = "^2.5.1"
numpy = "^2.1.3"
networkx = "^3.4.2"
pandas = "^2.2.3"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
